--- a/style.css
+++ b/style.css
@@ -5,5 +5,48 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'VT323', monospace, sans-serif;
+    color: #dfdfdf;
 }
 
+body, .snake { background-color: #414141; }
+
+.game-board {
+    border-radius: 100px;
+    grid-template-columns: repeat(20, 20px);
+    grid-template-rows: repeat(20, 20px);
+
+    margin: 10px;
+}
+
+.game-border-1 {
+    border: #595f43 solid 10px;
+    border-radius: 30px;
+    box-shadow: inset 0 0 0 10px #595f43;
+}
+
+.game-border-2 {
+    border: #abb78a solid 8px;
+    border-radius: 26px;
+    box-shadow: inset 0 0 0 10px #abb78a;
+}
+
+.game-border-3 {
+    border: #8b966c solid 30px;
+    border-radius: 20px;
+    box-shadow: inset 0 0 0 5px #8b966c;
+}
+
+.board-container {
+    position: relative;
+}
+
+.home-screen {
+    position: absolute;
+    top: 50%; 
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+
+.game-border-3, .logo-img { background-color: #c4cfa3; }
+#instruction-text { color: #222; }
